web-infras/parser/tests/fixtures/esprima/ES6/class/migrated_0026/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,12)
1|class A {a(eval){}}
 |          ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,12)
1|class A {a(eval){}}
 |          ^
